syntax = "proto3";

package Sucrose.Grpc.Common.Proto.Websiter;
option csharp_namespace = "Sucrose.Grpc.Common";

service Websiter {
    rpc ChangeAddress (WebsiterChangeRequest) returns (WebsiterChangeResponse);
}

message WebsiterChangeRequest {
    string url = 1;
    bool hook = 2;
}

message WebsiterChangeResponse {
    bool result = 1;
}